Fix z-index of rename modal

--- a/packages/edit-site/src/style.scss
+++ b/packages/edit-site/src/style.scss
@@ -119,3 +119,8 @@ body.js.site-editor-php {
 }
 
 @include wordpress-admin-schemes();
+
+// @TODO this is here because the rename dropdown popover is open at the same time as the rename modal. The latter has to be higher.
+.edit-site-list__rename_modal {
+	z-index: z-index(".components-popover") + 1;
+}
